--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
     <title>Raccourcis Blender</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="Blender, shortcuts, hotkeys, overview, cheat sheet, 3D, modeling">
-    <meta name="description" content="A selection of useful default shortcuts in Blender">
-
-    <meta property="og:title" content="Blender Shortcuts" />
-    <meta property="og:description" content="A selection of useful default shortcuts in Blender" />
-    <meta property="og:type" content="website" />
-
     <link rel="stylesheet" type="text/css" href="screen.css" media="screen">
     <script src="script.js" defer></script>
 </head>
@@ -51,9 +44,10 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
+                                <div class="tag" data-index="1">General</div>
                 <div class="tag" data-index="2">Navigation</div>
-                <div class="tag" data-index="5">Beginner</div>
+                <div class="tag" data-index="5">Edit Mode</div>
+                <div class="tag" data-index="6">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -93,9 +87,10 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
+                                <div class="tag" data-index="1">General</div>
                 <div class="tag" data-index="2">Navigation</div>
-                <div class="tag" data-index="5">Beginner</div>
+                <div class="tag" data-index="5">Edit Mode</div>
+                <div class="tag" data-index="6">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -127,6 +122,8 @@
 
             <div class="tags">
                 <div class="tag" data-index="2">Navigation</div>
+                <div class="tag" data-index="5">Edit Mode</div>
+                <div class="tag" data-index="6">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -155,9 +152,10 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
+                                <div class="tag" data-index="1">General</div>
                 <div class="tag" data-index="2">Navigation</div>
-                <div class="tag" data-index="5">Beginner</div>
+                <div class="tag" data-index="5">Edit Mode</div>
+                <div class="tag" data-index="6">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -183,8 +181,8 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
-                <div class="tag" data-index="5">Beginner</div>
+                                <div class="tag" data-index="1">General</div>
+                <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -216,9 +214,10 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
-                <div class="tag" data-index="4">Modeling</div>
-                <div class="tag" data-index="5">Beginner</div>
+                                <div class="tag" data-index="1">General</div>
+            <div class="tag" data-index="4">Modélisation</div>
+            <div class="tag" data-index="5">Edit Mode</div>
+            <div class="tag" data-index="5">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -248,9 +247,10 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
-                <div class="tag" data-index="4">Modeling</div>
-                <div class="tag" data-index="5">Beginner</div>
+                                <div class="tag" data-index="1">General</div>
+            <div class="tag" data-index="4">Modélisation</div>
+            <div class="tag" data-index="5">Edit Mode</div>
+            <div class="tag" data-index="5">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -277,9 +277,10 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
-                <div class="tag" data-index="4">Modeling</div>
-                <div class="tag" data-index="5">Beginner</div>
+                                <div class="tag" data-index="1">General</div>
+            <div class="tag" data-index="4">Modélisation</div>
+            <div class="tag" data-index="5">Edit Mode</div>
+            <div class="tag" data-index="5">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -304,8 +305,10 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
-                <div class="tag" data-index="5">Beginner</div>
+                                <div class="tag" data-index="1">General</div>
+            <div class="tag" data-index="4">Modélisation</div>
+            <div class="tag" data-index="5">Edit Mode</div>
+            <div class="tag" data-index="5">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -337,8 +340,10 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
-                <div class="tag" data-index="5">Beginner</div>
+                                <div class="tag" data-index="1">General</div>
+            <div class="tag" data-index="4">Modélisation</div>
+            <div class="tag" data-index="5">Edit Mode</div>
+            <div class="tag" data-index="5">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -374,7 +379,9 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
+            <div class="tag" data-index="4">Modélisation</div>
+            <div class="tag" data-index="5">Edit Mode</div>
+            <div class="tag" data-index="5">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -408,8 +415,10 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
-                <div class="tag" data-index="5">Beginner</div>
+            <div class="tag" data-index="1">General</div>
+            <div class="tag" data-index="4">Modélisation</div>
+            <div class="tag" data-index="5">Edit Mode</div>
+            <div class="tag" data-index="5">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -440,7 +449,9 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
+            <div class="tag" data-index="4">Modélisation</div>
+            <div class="tag" data-index="5">Edit Mode</div>
+            <div class="tag" data-index="5">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -477,8 +488,8 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="3">Selection</div>
-                <div class="tag" data-index="5">Beginner</div>
+                <div class="tag" data-index="3">Sélection</div>
+            <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -510,7 +521,9 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
+            <div class="tag" data-index="4">Modélisation</div>
+            <div class="tag" data-index="5">Edit Mode</div>
+            <div class="tag" data-index="5">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -546,7 +559,8 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
+            <div class="tag" data-index="4">Modélisation</div>
+            <div class="tag" data-index="5">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -573,8 +587,9 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
-                <div class="tag" data-index="6">Wizard</div>
+            <div class="tag" data-index="4">Modélisation</div>
+            <div class="tag" data-index="5">Edit Mode</div>
+            <div class="tag" data-index="5">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -605,7 +620,9 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
+                            <div class="tag" data-index="1">General</div>
+            <div class="tag" data-index="5">Edit Mode</div>
+            <div class="tag" data-index="5">Object Mode</div>
                 <div class="tag" data-index="3">Selection</div>
             </div>
 
@@ -634,9 +651,9 @@
             </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
                 <div class="tag" data-index="3">Selection</div>
-                <div class="tag" data-index="5">Beginner</div>
+            <div class="tag" data-index="5">Edit Mode</div>
+            <div class="tag" data-index="5">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -669,7 +686,7 @@
 
             <div class="tags">
                 <div class="tag" data-index="3">Selection</div>
-                <div class="tag" data-index="5">Beginner</div>
+            <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -701,7 +718,7 @@
 
             <div class="tags">
                 <div class="tag" data-index="3">Selection</div>
-                <div class="tag" data-index="6">Wizard</div>
+            <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -730,7 +747,7 @@
 
             <div class="tags">
                 <div class="tag" data-index="3">Selection</div>
-                <div class="tag" data-index="6">Wizard</div>
+            <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -764,7 +781,7 @@
 
         <div class="tags">
             <div class="tag" data-index="3">Sélection</div>
-            <div class="tag" data-index="6">Sorcier</div>
+            <div class="tag" data-index="5">Edit Mode</div>
         </div>
 
 
@@ -792,7 +809,8 @@
 
             <div class="tags">
                 <div class="tag" data-index="3">Selection</div>
-                <div class="tag" data-index="6">Wizard</div>
+            <div class="tag" data-index="5">Edit Mode</div>
+            <div class="tag" data-index="5">Object Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -829,8 +847,9 @@
             </div>
 
             <div class="tags">
+                            <div class="tag" data-index="1">General</div>
                 <div class="tag" data-index="4">Modeling</div>
-                <div class="tag" data-index="5">Beginner</div>
+            <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -860,7 +879,9 @@
         </div>
 
             <div class="tags">
+                            <div class="tag" data-index="1">General</div>
                 <div class="tag" data-index="4">Modeling</div>
+                <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -890,7 +911,9 @@
         </div>
 
             <div class="tags">
+                            <div class="tag" data-index="1">General</div>
                 <div class="tag" data-index="4">Modeling</div>
+                <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -920,6 +943,7 @@
 
             <div class="tags">
                 <div class="tag" data-index="4">Modeling</div>
+                <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -945,6 +969,7 @@
 
             <div class="tags">
                 <div class="tag" data-index="4">Modeling</div>
+                <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -970,6 +995,7 @@
 
             <div class="tags">
                 <div class="tag" data-index="4">Modeling</div>
+                <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -994,7 +1020,9 @@
         </div>
 
             <div class="tags">
+                            <div class="tag" data-index="1">General</div>
                 <div class="tag" data-index="4">Modeling</div>
+                <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -1022,8 +1050,9 @@
         </div>
 
             <div class="tags">
+                            <div class="tag" data-index="1">General</div>
                 <div class="tag" data-index="4">Modeling</div>
-                <div class="tag" data-index="5">Beginner</div>
+                <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -1053,7 +1082,7 @@
 
             <div class="tags">
                 <div class="tag" data-index="4">Modeling</div>
-                <div class="tag" data-index="6">Wizard</div>
+                <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -1087,8 +1116,9 @@
         </div>
 
             <div class="tags">
+                            <div class="tag" data-index="1">General</div>
                 <div class="tag" data-index="4">Modeling</div>
-                <div class="tag" data-index="5">Beginner</div>
+                <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -1116,6 +1146,7 @@
 
             <div class="tags">
                 <div class="tag" data-index="4">Modeling</div>
+                <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -1142,6 +1173,7 @@
 
             <div class="tags">
                 <div class="tag" data-index="4">Modeling</div>
+                <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -1170,7 +1202,10 @@
 
 
             <div class="tags">
+                            <div class="tag" data-index="1">General</div>
                 <div class="tag" data-index="4">Modeling</div>
+                <div class="tag" data-index="5">Edit Mode</div>
+                 <div class="tag" data-index="6">Object Mode</div>               
             </div>
 
             <a class="itemCollapse"></a>
@@ -1226,7 +1261,7 @@
 
             <div class="tags">
                 <div class="tag" data-index="4">Modeling</div>
-                <div class="tag" data-index="6">Wizard</div>
+                <div class="tag" data-index="5">Edit Mode</div>
             </div>
 
             <a class="itemCollapse"></a>
@@ -1256,7 +1291,10 @@
         </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
+                            <div class="tag" data-index="1">General</div>
+                <div class="tag" data-index="4">Modeling</div>
+                <div class="tag" data-index="5">Edit Mode</div>
+                 <div class="tag" data-index="6">Object Mode</div>   
             </div>
 
             <a class="itemCollapse"></a>
@@ -1287,7 +1325,9 @@
         </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
+                <div class="tag" data-index="4">Modeling</div>
+                <div class="tag" data-index="5">Edit Mode</div>
+                 <div class="tag" data-index="6">Object Mode</div>   
             </div>
 
             <a class="itemCollapse"></a>
@@ -1318,8 +1358,9 @@
         </div>
 
             <div class="tags">
-                <div class="tag" data-index="1">General</div>
-                <div class="tag" data-index="6">Wizard</div>
+                <div class="tag" data-index="4">Modeling</div>
+                <div class="tag" data-index="5">Edit Mode</div>
+                 <div class="tag" data-index="6">Object Mode</div>   
             </div>
 
             <a class="itemCollapse"></a>
@@ -1346,8 +1387,8 @@
         </div>
 
             <div class="tags">
-                <div class="tag" data-index="4">Modeling</div>
-                <div class="tag" data-index="6">Wizard</div>
+            <div class="tag" data-index="4">Modeling</div>
+            <div class="tag" data-index="5">Edit Mode</div> 
             </div>
 
             <a class="itemCollapse"></a>
@@ -1376,8 +1417,9 @@
         </div>
 
         <div class="tags">
-            <div class="tag" data-index="4">Modélisation</div>
-            <div class="tag" data-index="6">Sorcier</div>
+                <div class="tag" data-index="4">Modeling</div>
+                <div class="tag" data-index="5">Edit Mode</div>
+                <div class="tag" data-index="6">Object Mode</div>  
         </div>
 
             <a class="itemCollapse"></a>
@@ -1390,12 +1432,12 @@
         <!-- <button type="button" id="buttonFilter" class="hidden">Tags</button> -->
         <div id="filter" class="hidden">
             <button type="button" class="buttonTag active" data-index="0">Tout</button>
-            <button type="button" class="buttonTag" data-index="1">Général</button>
+            <button type="button" class="buttonTag" data-index="1">Général</button>           
             <button type="button" class="buttonTag" data-index="2">Navigation</button>
             <button type="button" class="buttonTag" data-index="3">Sélection</button>
             <button type="button" class="buttonTag" data-index="4">Modélisation</button>
-            <button type="button" class="buttonTag" data-index="5">Débutant</button>
-            <button type="button" class="buttonTag" data-index="6">Autre</button>
+            <button type="button" class="buttonTag" data-index="5">Edit Mode</button>
+            <button type="button" class="buttonTag" data-index="6">Object Mode</button>
         </div>
     </div>
 </body>
